# tun-camembert-ner

./: .gitignore  DataAnnotation (1).ipynb  LICENSE  README.md  TunCamemBERT_usage.ipynb  pyproject.toml  tun_ner_camembert.ipynb
tunisian_ner/: __init__.py  ner.py
