[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tun-camembert-ner"
version = "0.1.1"
description = "Tunisian Named Entity Recognition for French text using CamemBERT"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/NourBesrour/tunisian-ner"